syntax = "proto3";

package proto;

import "google/protobuf/timestamp.proto";

option go_package = "github.com/timoth-y/scrapnote-api/data.records/api/rpc/proto";

message Record {
  string uniqueID = 1;
  string content = 2;
  string sourceURL = 3;
  string markerURL = 4;
  google.protobuf.Timestamp addedAt = 5;
}

service RecordService {
  rpc Get(RecordFilter) returns (RecordResponse) {}
  rpc Count(RecordFilter) returns (RecordResponse) {}
}

message RecordFilter {
  repeated string recordID = 1;
  string topicID = 2;
}

message RecordResponse {
  repeated Record records = 1;
  int64 count = 2;
}
